@@ -1,3 +1,10 @@
+2007-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tooltip.tcl:  Added support for tooltips on text widget tags
+	                (useful for tkchat url links). Fixed menu tooltips.
+	* tooltip.man:  Added documentation.
+	* pkgIndex.tcl: Incremented version to 1.2
+
 2006-08-02  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tooltip.tcl (::tooltip::show): better handle boundary case
